--- a/views/list.ejs
+++ b/views/list.ejs
@@ -8,5 +8,16 @@
 </head>
 <body>
   <h1><%= currentDay %></h1>
+
+  <ul>
+    <% for (let i = 0; i < tasks.length; i++){ %> 
+      <li><%= tasks[i] %> </li>
+    <% } %>
+  </ul>
+
+  <form action="/" method="POST">
+    <input type="text" name="newTask" id="newTask" placeholder="add a new task">
+    <button type="submit" name="button">Add</button>
+  </form>
 </body>
 </html>
