--- a/views/list.ejs
+++ b/views/list.ejs
@@ -4,20 +4,29 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/styles.css">
   <title>To do list</title>
 </head>
 <body>
-  <h1><%= currentDay %></h1>
 
-  <ul>
-    <% for (let i = 0; i < tasks.length; i++){ %> 
-      <li><%= tasks[i] %> </li>
-    <% } %>
-  </ul>
+  <div class="box" id="heading">
+    <h1><%= currentDay %></h1>
+  </div>
 
-  <form action="/" method="POST">
-    <input type="text" name="newTask" id="newTask" placeholder="add a new task">
-    <button type="submit" name="button">Add</button>
-  </form>
+  <div class="box">
+    <% for (let i = 0; i < tasks.length; i++){ %>
+    <div class="item">
+      <input type="checkbox">
+      <p><%= tasks[i] %></p>
+    </div>
+      <% } %>
+
+      <form class="item" action="/" method="POST">
+        <input type="text" name="newTask" id="newTask" placeholder="Add a new task" autocomplete="off">
+        <button type="submit" name="button">+</button>
+      </form>
+  </div>
+
+
 </body>
 </html>
